# phone2pad

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY.md  QUICKSTART.md  README.md  RELEASE.md
android/: build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/phantompad/: BlackPadActivity.kt  PadSocketServer.kt  TouchFrameBuilder.kt
android/app/src/main/kotlin/com/phone2pad/: BlackPadActivity.kt  MainActivity.kt  PadSocketServer.kt  TouchFrameBuilder.kt
android/app/src/main/res/values/: ic_launcher_background.xml  themes.xml
android/proto/: build.gradle.kts
android/proto/src/main/kotlin/com/phantompad/proto/: Messages.kt  Packet.kt  PacketDecoder.kt  PacketEncoder.kt
android/proto/src/main/kotlin/com/phone2pad/proto/: Messages.kt  Packet.kt  PacketDecoder.kt  PacketEncoder.kt
android/proto/src/test/kotlin/com/phantompad/proto/: JsonLite.kt  PacketCodecTest.kt  TestVectorLoader.kt
android/proto/src/test/kotlin/com/phone2pad/proto/: JsonLite.kt  PacketCodecTest.kt  TestVectorLoader.kt
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-PROTOCOL.md  03-HID-PTP-SPEC.md  04-ROADMAP.md  05-TESTING.md  06-WORKFLOW.md  ADB-SETUP.md
pc/: CMakeLists.txt
pc/client/: CMakeLists.txt  tray.rc  tray_resource.h
pc/client/include/phantompad/client/: adb_manager.hpp  frame_receiver.hpp  input_injector.hpp  mouse_sink.hpp  net_client.hpp  replay.hpp  sink.hpp  trace.hpp  win32_input_injector.hpp
pc/client/include/phone2pad/client/: adb_config.hpp  adb_manager.hpp  autostart.hpp  client_service.hpp  frame_receiver.hpp  gesture_router.hpp  gesture_sink.hpp  input_injector.hpp  mouse_sink.hpp  net_client.hpp  orientation_normalizer.hpp  process_runner.hpp  replay.hpp  sink.hpp  trace.hpp  win32_input_injector.hpp
pc/client/proto/: CMakeLists.txt
pc/client/proto/include/phantompad/proto/: decoder.hpp  encoder.hpp  haptic.hpp  hello.hpp  packet.hpp  ping_pong.hpp  touch_frame.hpp
pc/client/proto/include/phone2pad/proto/: decoder.hpp  encoder.hpp  haptic.hpp  hello.hpp  packet.hpp  ping_pong.hpp  touch_frame.hpp
pc/client/proto/src/: decoder.cpp  encoder.cpp
pc/client/proto/tests/: CMakeLists.txt  json_lite.hpp  packet_codec_test.cpp  stream_resync_test.cpp  test_main.hpp  vector_support.hpp
pc/client/src/: adb_config.cpp  adb_manager.cpp  autostart.cpp  client_service.cpp  frame_receiver.cpp  gesture_router.cpp  gesture_sink.cpp  main.cpp  mouse_sink.cpp  net_client.cpp  orientation_normalizer.cpp  process_runner.cpp  replay.cpp  trace.cpp  tray_main.cpp  win32_input_injector.cpp
pc/client/tests/: CMakeLists.txt  adb_config_test.cpp  adb_manager_test.cpp  autostart_test.cpp  client_service_test.cpp  frame_receiver_test.cpp  gesture_router_test.cpp  gesture_sink_test.cpp  mock_injector.hpp  mouse_sink_test.cpp  orientation_test.cpp  process_runner_test.cpp  test_entry.cpp  trace_replay_test.cpp
pc/tools/recorder/: CMakeLists.txt  main.cpp
pc/tools/replay/: CMakeLists.txt  main.cpp
pc/tools/replay/fixtures/: four_finger_swipe_left.pptrace  one_finger_move.pptrace  one_finger_tap.pptrace  pinch_zoom.pptrace  three_finger_alt_tab_right.pptrace  three_finger_swipe_up.pptrace  two_finger_scroll_h.pptrace  two_finger_scroll_v.pptrace  two_finger_scroll_v_reverse.pptrace  two_finger_tap.pptrace
prompts/: phase-0A-bootstrap.md  phase-B-gestures.md  phase-C-driver.md
proto/test-vectors/: haptic.json  hello_basic.json  ping.json  pong.json  resync_after_garbage.json  touch_frame_1contact.json  touch_frame_2contacts.json  touch_frame_5contacts.json  touch_frame_empty.json  touch_frame_lift.json
proto/tools/: gen_test_vectors.py
scripts/: make-android-icons.ps1  make-icon.ps1  package-release.ps1  test-all.ps1
scripts/assets/: windows-README.txt
scripts/installer/: phone2pad.iss
